docs: 문법 및 설명 오류 수정, 한국어 버전 문서 추가